--- a/styles.css
+++ b/styles.css
@@ -266,3 +266,18 @@ span {
     border-bottom: 3px solid transparent;transition: 0.3s ease;
 }
 
+.footer ul li a:hover {
+    border-bottom: 3px solid orangered;
+}
+
+.footer ul li {
+    display: inline-block;
+    padding: 0 15px;
+}
+
+.footer .copyright {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 12px;
+    color: white;
+}
