--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@ span {
     width: 550px;
     box-shadow: 0 0 25px orangered, 0 0 50px orangered;
     border-radius: 50%;
+    display: flex;
 }
 
 .about-content h2 {
